Fixed overflow issue.1

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,10 +9,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 
+
 }
 
 html{
-
+  overflow:hidden;
   font-size:16px;
   font-family: 'Segoe UI', BlinkMacSystemFont, 'Seg', sans-serif;
 }
